[gd_scene load_steps=8 format=2]

[ext_resource path="res://menus/main.gd" type="Script" id=2]
[ext_resource path="res://menus/text.theme" type="Theme" id=3]
[ext_resource path="res://menus/title.theme" type="Theme" id=4]

[sub_resource type="Environment" id=4]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.964706, 0.435294, 0.117647, 1 )

[sub_resource type="Animation" id=5]
resource_name = "background"
length = 30.0
loop = true
tracks/0/type = "transform"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 0.0106508, 0.0596151, -4.19333, 0.0622331, 0, 0, 0.998062, 1, 1, 1, 8.9, 1, 0.261069, 1.86881, -3.84956, -0.159847, 0.471186, 0.359522, 0.789415, 1, 1, 1, 18, 1, 0.313697, 1.18991, -3.97856, -0.10385, 0.0560938, 0.949776, 0.289819, 1, 1, 1, 26.9, 1, 0.0106508, 0.0596151, -4.19333, 0.0622331, 0, 0, 0.998062, 1, 1, 1 )

[node name="MarginContainer" type="MarginContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -192.0

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.992254, 0.124225, 0, -0.124225, 0.992254, -0.0106508, 1.10387, 6.86345 )
environment = SubResource( 4 )

[node name="CSGMesh" type="CSGMesh" parent="Camera"]
transform = Transform( -0.725107, -0.674234, -0.140104, 0.653055, -0.737811, 0.170747, -0.218494, 0.0323142, 0.975303, 0.296672, 1.12641, -3.99063 )
mesh = SubResource( 2 )
material = SubResource( 6 )

[node name="CSGMesh" type="CSGMesh" parent="Camera/CSGMesh"]
transform = Transform( 0.814004, -0.289164, 0.503767, 0.0721571, 0.910901, 0.406267, -0.57636, -0.294353, 0.762343, -0.977622, 1.06657, -1.95741 )
mesh = SubResource( 2 )

[node name="CSGMesh2" type="CSGMesh" parent="Camera/CSGMesh"]
transform = Transform( 0.466498, -0.884486, -0.00807345, 0.484998, 0.248145, 0.83857, -0.739701, -0.395107, 0.544734, 0.534567, -1.30946, 1.65061 )
mesh = SubResource( 2 )

[node name="MainMenu" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="HBox" type="HBoxContainer" parent="MainMenu"]
margin_right = 1024.0
margin_bottom = 300.0

[node name="VB" type="VBoxContainer" parent="MainMenu/HBox"]
margin_right = 167.0
margin_bottom = 300.0

[node name="StartButton" type="Button" parent="MainMenu/HBox/VB"]
margin_right = 167.0
margin_bottom = 45.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../MultiplayerButton")
theme = ExtResource( 3 )
text = "Start"
flat = true

[node name="MultiplayerButton" type="Button" parent="MainMenu/HBox/VB"]
margin_top = 49.0
margin_right = 167.0
margin_bottom = 94.0
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../SettingsButton")
theme = ExtResource( 3 )
text = "Multiplayer"
flat = true

[node name="SettingsButton" type="Button" parent="MainMenu/HBox/VB"]
margin_top = 98.0
margin_right = 167.0
margin_bottom = 143.0
focus_neighbour_top = NodePath("../MultiplayerButton")
focus_neighbour_bottom = NodePath("../QuitButton")
theme = ExtResource( 3 )
text = "Settings"
flat = true

[node name="QuitButton" type="Button" parent="MainMenu/HBox/VB"]
margin_top = 147.0
margin_right = 167.0
margin_bottom = 192.0
focus_neighbour_top = NodePath("../SettingsButton")
focus_neighbour_bottom = NodePath("../StartButton")
theme = ExtResource( 3 )
text = "Quit"
flat = true

[node name="ERUPT" type="RichTextLabel" parent="MainMenu/HBox"]
margin_left = 171.0
margin_right = 762.89
margin_bottom = 300.0
rect_min_size = Vector2( 591.89, 300 )
theme = ExtResource( 4 )
text = "ERUPT"

[node name="v01" type="RichTextLabel" parent="MainMenu/HBox"]
margin_left = 766.0
margin_right = 766.0
margin_bottom = 300.0
theme = ExtResource( 3 )
custom_colors/default_color = Color( 1, 1, 1, 0.356863 )
text = "v 0.1
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Camera/CSGMesh")
autoplay = "background"
anims/background = SubResource( 5 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( -0.725107, -0.674234, -0.140104, 0.620854, -0.728081, 0.290582, -0.297927, 0.123719, 0.946537, -1.78268, 0.248186, 6.11392 )
light_specular = 5.0
shadow_enabled = true
shadow_color = Color( 0.698039, 0.690196, 0.72549, 1 )
omni_shadow_mode = 0

[connection signal="pressed" from="MainMenu/HBox/VB/StartButton" to="MainMenu" method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainMenu/HBox/VB/MultiplayerButton" to="MainMenu" method="_on_MultiplayerButton_pressed"]
[connection signal="pressed" from="MainMenu/HBox/VB/SettingsButton" to="MainMenu" method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MainMenu/HBox/VB/QuitButton" to="MainMenu" method="_on_QuitButton_pressed"]
